src/wrap/iio.h

typedef ptrdiff_t ssize_t;
struct iio_context;
struct iio_device;
struct iio_channel;
struct iio_buffer;
struct iio_context_info;
struct iio_scan_context;
struct iio_scan_block;
__api __check_ret struct iio_scan_context * iio_create_scan_context(
		const char *backend, unsigned int flags);
__api void iio_scan_context_destroy(struct iio_scan_context *ctx);
__api __check_ret ssize_t iio_scan_context_get_info_list(struct iio_scan_context *ctx,
		struct iio_context_info ***info);
__api void iio_context_info_list_free(struct iio_context_info **info);
__api __check_ret __pure const char * iio_context_info_get_description(
		const struct iio_context_info *info);
__api __check_ret __pure const char * iio_context_info_get_uri(
		const struct iio_context_info *info);
__api struct iio_scan_block * iio_create_scan_block(
		const char *backend, unsigned int flags);
__api void iio_scan_block_destroy(struct iio_scan_block *blk);
__api ssize_t iio_scan_block_scan(struct iio_scan_block *blk);
__api struct iio_context_info *iio_scan_block_get_info(
		struct iio_scan_block *blk, unsigned int index);
__api void iio_library_get_version(unsigned int *major,
		unsigned int *minor, char git_tag[8]);
__api void iio_strerror(int err, char *dst, size_t len);
__api __check_ret __cnst bool iio_has_backend(const char *backend);
__api __check_ret __cnst unsigned int iio_get_backends_count(void);
__api __check_ret __cnst const char * iio_get_backend(unsigned int index);
__api __check_ret struct iio_context * iio_create_default_context(void);
__api __check_ret struct iio_context * iio_create_local_context(void);
__api __check_ret struct iio_context * iio_create_xml_context(const char *xml_file);
__api __check_ret struct iio_context * iio_create_xml_context_mem(
		const char *xml, size_t len);
__api __check_ret struct iio_context * iio_create_network_context(const char *host);
__api __check_ret struct iio_context * iio_create_context_from_uri(const char *uri);
__api __check_ret struct iio_context * iio_context_clone(const struct iio_context *ctx);
__api void iio_context_destroy(struct iio_context *ctx);
__api __check_ret int iio_context_get_version(const struct iio_context *ctx,
		unsigned int *major, unsigned int *minor, char git_tag[8]);
__api __check_ret __pure const char * iio_context_get_xml(const struct iio_context *ctx);
__api __check_ret __pure const char * iio_context_get_name(const struct iio_context *ctx);
__api __check_ret __pure const char * iio_context_get_description(
		const struct iio_context *ctx);
__api __check_ret __pure unsigned int iio_context_get_attrs_count(
		const struct iio_context *ctx);
__api __check_ret int iio_context_get_attr(
		const struct iio_context *ctx, unsigned int index,
		const char **name, const char **value);
__api __check_ret const char * iio_context_get_attr_value(
		const struct iio_context *ctx, const char *name);
__api __check_ret __pure unsigned int iio_context_get_devices_count(
		const struct iio_context *ctx);
__api __check_ret __pure struct iio_device * iio_context_get_device(
		const struct iio_context *ctx, unsigned int index);
__api __check_ret __pure struct iio_device * iio_context_find_device(
		const struct iio_context *ctx, const char *name);
__api __check_ret int iio_context_set_timeout(
		struct iio_context *ctx, unsigned int timeout_ms);
__api __check_ret __pure const struct iio_context * iio_device_get_context(
		const struct iio_device *dev);
__api __check_ret __pure const char * iio_device_get_id(const struct iio_device *dev);
__api __check_ret __pure const char * iio_device_get_name(const struct iio_device *dev);
__api __check_ret __pure unsigned int iio_device_get_channels_count(
		const struct iio_device *dev);
__api __check_ret __pure unsigned int iio_device_get_attrs_count(
		const struct iio_device *dev);
__api __check_ret __pure unsigned int iio_device_get_buffer_attrs_count(
		const struct iio_device *dev);
__api __check_ret __pure struct iio_channel * iio_device_get_channel(
		const struct iio_device *dev, unsigned int index);
__api __check_ret __pure const char * iio_device_get_attr(
		const struct iio_device *dev, unsigned int index);
__api __check_ret __pure const char * iio_device_get_buffer_attr(
		const struct iio_device *dev, unsigned int index);
__api __check_ret __pure struct iio_channel * iio_device_find_channel(
		const struct iio_device *dev, const char *name, bool output);
__api __check_ret __pure const char * iio_device_find_attr(
		const struct iio_device *dev, const char *name);
__api __check_ret __pure const char * iio_device_find_buffer_attr(
		const struct iio_device *dev, const char *name);
__api __check_ret ssize_t iio_device_attr_read(const struct iio_device *dev,
		const char *attr, char *dst, size_t len);
__api __check_ret int iio_device_attr_read_all(struct iio_device *dev,
		int (*cb)(struct iio_device *dev, const char *attr,
			const char *value, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_attr_read_bool(const struct iio_device *dev,
		const char *attr, bool *val);
__api __check_ret int iio_device_attr_read_longlong(const struct iio_device *dev,
		const char *attr, long long *val);
__api __check_ret int iio_device_attr_read_double(const struct iio_device *dev,
		const char *attr, double *val);
__api __check_ret ssize_t iio_device_attr_write(const struct iio_device *dev,
		const char *attr, const char *src);
__api __check_ret ssize_t iio_device_attr_write_raw(const struct iio_device *dev,
		const char *attr, const void *src, size_t len);
__api __check_ret int iio_device_attr_write_all(struct iio_device *dev,
		ssize_t (*cb)(struct iio_device *dev,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_attr_write_bool(const struct iio_device *dev,
		const char *attr, bool val);
__api __check_ret int iio_device_attr_write_longlong(const struct iio_device *dev,
		const char *attr, long long val);
__api __check_ret int iio_device_attr_write_double(const struct iio_device *dev,
		const char *attr, double val);
__api __check_ret ssize_t iio_device_buffer_attr_read(const struct iio_device *dev,
		const char *attr, char *dst, size_t len);
__api __check_ret int iio_device_buffer_attr_read_all(struct iio_device *dev,
		int (*cb)(struct iio_device *dev, const char *attr,
			const char *value, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_buffer_attr_read_bool(const struct iio_device *dev,
		const char *attr, bool *val);
__api __check_ret int iio_device_buffer_attr_read_longlong(const struct iio_device *dev,
		const char *attr, long long *val);
__api __check_ret int iio_device_buffer_attr_read_double(const struct iio_device *dev,
		const char *attr, double *val);
__api __check_ret ssize_t iio_device_buffer_attr_write(const struct iio_device *dev,
		const char *attr, const char *src);
__api __check_ret ssize_t iio_device_buffer_attr_write_raw(const struct iio_device *dev,
		const char *attr, const void *src, size_t len);
__api __check_ret int iio_device_buffer_attr_write_all(struct iio_device *dev,
		ssize_t (*cb)(struct iio_device *dev,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_buffer_attr_write_bool(const struct iio_device *dev,
		const char *attr, bool val);
__api __check_ret int iio_device_buffer_attr_write_longlong(const struct iio_device *dev,
		const char *attr, long long val);
__api __check_ret int iio_device_buffer_attr_write_double(const struct iio_device *dev,
		const char *attr, double val);
__api void iio_device_set_data(struct iio_device *dev, void *data);
__api void * iio_device_get_data(const struct iio_device *dev);
__api __check_ret int iio_device_get_trigger(const struct iio_device *dev,
		const struct iio_device **trigger);
__api __check_ret int iio_device_set_trigger(const struct iio_device *dev,
		const struct iio_device *trigger);
__api __check_ret __pure bool iio_device_is_trigger(const struct iio_device *dev);
__api __check_ret int iio_device_set_kernel_buffers_count(const struct iio_device *dev,
		unsigned int nb_buffers);
__api __check_ret __pure const struct iio_device * iio_channel_get_device(
		const struct iio_channel *chn);
__api __check_ret __pure const char * iio_channel_get_id(const struct iio_channel *chn);
__api __check_ret __pure const char * iio_channel_get_name(const struct iio_channel *chn);
__api __check_ret __pure bool iio_channel_is_output(const struct iio_channel *chn);
__api __check_ret __pure bool iio_channel_is_scan_element(const struct iio_channel *chn);
__api __check_ret __pure unsigned int iio_channel_get_attrs_count(
		const struct iio_channel *chn);
__api __check_ret int iio_channel_attr_read_all(struct iio_channel *chn,
		int (*cb)(struct iio_channel *chn,
			const char *attr, const char *val, size_t len, void *d),
		void *data);
__api __check_ret int iio_channel_attr_write_all(struct iio_channel *chn,
		ssize_t (*cb)(struct iio_channel *chn,
			const char *attr, void *buf, size_t len, void *d),
		void *data);
__api __check_ret ssize_t iio_buffer_foreach_sample(struct iio_buffer *buf,
		ssize_t (*callback)(const struct iio_channel *chn,
			void *src, size_t bytes, void *d), void *data);
__api __check_ret int iio_device_debug_attr_read_all(struct iio_device *dev,
		int (*cb)(struct iio_device *dev, const char *attr,
			const char *value, size_t len, void *d),
		void *data);
__api __check_ret int iio_device_debug_attr_write_all(struct iio_device *dev,
		ssize_t (*cb)(struct iio_device *dev,
			const char *attr, void *buf, size_t len, void *d),
		void *data);